# ScratchPadd

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt  macOS.jenkinsfile
cmake/: helpers.cmake  linux.cmake  macos.cmake
include/: AudioPadd.hpp  Base.hpp  BaseWorker.hpp  DisplayPadd.hpp  EventTimer.hpp  GL.hpp  Message.hpp  PaddConfigs.hpp  ScratchPadd.hpp  ScratchPaddSystem.hpp  ScratchPaddSystemImplementation.hpp  StoryPadd.hpp  TestWorker1.hpp  TestWorker2.hpp  TestWorker3.hpp  Timer.hpp  WorkerDispatcher.hpp  WorkerSystem.hpp  Workers.hpp
include/Graphics/: GL.hpp  Graphics.hpp
include/ScratchPadd/: Base.hpp  EventTimer.hpp  Helper.hpp  Message.hpp  ScratchPadd.hpp  System.hpp  SystemImplementation.hpp  Timer.hpp
include/ScratchPadd/Graphics/: Colors.hpp  Graphics.hpp
include/ScratchPadd/Graphics/GL/: GL.hpp  GL_ControlView.hpp  GL_Error.hpp  GL_FrameBuffer.hpp  GL_Graphics.hpp  GL_SampleItems.hpp  GL_Shader.hpp  GL_VertexIndexBuffer.hpp  GL_View.hpp
include/ScratchPadd/Graphics/GL/Shaders/: fragment.shader  gl_view_fragment.shader  gl_view_vertex.shader  vertex.shader
include/ScratchPadd/Tests/: Message.hpp  TestReceivePadd.hpp  TestSendPadd.hpp
resources/: ScratchPadd.icns
src/: Graphics.cpp  main.cpp
